--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <%= render 'layouts/navbar' %>
+  <main class="container">
     <%= yield %>
+  </main>
   </body>
 </html>
