--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,6 @@
 <% if current_user %>
   <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
   <% else %>
-  <%= link_to 'Login', new_user_session_path %>
+  <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
   <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary' %>
 <% end %>
