--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,6 @@
 <div id='chatroom_container' class="container d-flex pt-4">
   <div id="side_panel" class="col-md-4 col-sm-4 me-3 mb-3">
-    <h5> Hi <%= @current_user.email %> </h5>
+    <h4> Hi <%= @current_user.email %> </h4>
     <hr>
     <h4> Users </h4>
     <%= turbo_stream_from 'users' %>
@@ -15,12 +15,15 @@
       <%= render @rooms %>
     </div>
   </div>
-  <div id="room_container" class="w-100">
+  <div id="room_container" class="col-md-8 col-sm-8">
+    <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
+    <hr>
     <% if @single_room %>
-      <div id="single_room" class="shadow p-3 mb-5 bg-body rounded">
-        <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
-        <hr>
+      <div id="single_room" class="shadow p-3 mb-5 bg-body rounded d-flex flex-column justify-content-end">
         <%= turbo_stream_from @single_room %>
+        <div id="messages">
+          <%= render @messages %>
+        </div>
         <%= render 'messages/new_message_form' %>
       </div>
     <% end  %>
