--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,34 +1,39 @@
 body {
   overflow: hidden;
 }
-
 .msg-form {
   width: 100%;
   height: 56px;
   padding: 10px;
 }
 
-#single_room,
+#single_room {
+  height: calc(100vh - 150px);
+}
+
 #messages {
-  height: calc(100vh - 50px);
+  height: calc(100vh - 150px);
   overflow-x: hidden;
   overflow-y: scroll;
 }
 
 #room_container {
-  margin-right: 0 !important;
+  height: 100vh;
+  margin-right: 0px !important;
 }
 
 #side_panel {
-  height: calc(100vh - 50px);
+  height: 100vh;
+  margin-right: 0px !important;
   overflow-x: hidden;
   overflow-y: scroll;
+  margin-bottom: 55px;
 }
-
 #chatroom_container {
-  margin-right: 0 !important;
+  height: 100vh;
+  margin-right: 0px !important;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .msg-content {
@@ -43,5 +48,5 @@ body {
   padding: 5px;
   border-radius: 10px;
   margin-bottom: 10px;
-  background-color: #555555;
+  background-color: #dee2e6;
 }
