--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -43,10 +43,7 @@ body {
 
 .message_box {
   word-wrap: break-word;
-  width: fit-content;
-  max-width: 40%;
+  width: 100%;
   padding: 5px;
   border-radius: 10px;
-  margin-bottom: 10px;
-  background-color: #dee2e6;
 }
