--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,8 +1,13 @@
-<div class="cont-<%=message.user.id%>">
-  <div class="message_box msg-<%= message.user.id %>">
+<div class="message-line d-flex flex-column cont-<%=message.user.id%>">
+  <div class="d-flex justify-content-between message_box msg-<%= message.user.id %>">
     <% unless message.room.is_private %>
-      <h6 class="name"> <%= message.user.email %> </h6>
+      <p class="author small mb-1 text-success"><%= message.user.email %></p>
+      <p class="small mb-1 text-muted me-3"><%= l(message.created_at, format: :short) %></p>
     <% end %>
-    <%= message.body %>
+  </div>
+  <div class="d-flex flex-row justify-content-start">
+    <div class="w-100">
+      <p class="small p-2 mb-3 rounded-3 w-100" style="background-color: #f5f6f7;"><%= message.body %></p>
+    </div>
   </div>
 </div>
