--- a/app/views/messages/_new_message_form.html.erb
+++ b/app/views/messages/_new_message_form.html.erb
@@ -1,6 +1,7 @@
-<div class="form-group msg-form">
+<div class="form-group msg-form w-100">
   <%= form_with(model: [@single_room, @message], remote: true, class: "d-flex" ) do |f| %>
-    <%= f.text_field :body, id: 'chat-text', class: "form-control msg-content", autocomplete: 'off' %>
-    <%= f.submit data: { disable_with: false }, class: "btn btn-warning" %>
+    <%= f.text_area :body, id: 'chat-text', class: "form-control msg-content me-2",
+                    placeholder: 'Type your message...', autocomplete: 'off' %>
+    <%= f.submit 'Send', data: { disable_with: false }, class: "btn btn-warning" %>
   <% end %>
 </div>
