--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,32 +1,45 @@
-<div id='chatroom_container' class="container d-flex pt-4">
-  <div id="side_panel" class="col-md-4 col-sm-4 me-3 mb-3">
-    <h4> Hi <%= @current_user.email %> </h4>
-    <hr>
-    <h4> Users </h4>
-    <%= turbo_stream_from 'users' %>
-    <div id="users">
-      <%= render @users %>
-    </div>
-    <hr>
-    <h4> Rooms </h4>
-    <%= render 'rooms/new_room_form' %>
-    <%= turbo_stream_from 'rooms' %>
-    <div id="rooms">
-      <%= render @rooms %>
-    </div>
-  </div>
-  <div id="room_container" class="col-md-8 col-sm-8">
-    <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
-    <hr>
-    <% if @single_room %>
-      <div id="single_room" class="shadow p-3 mb-5 bg-body rounded d-flex flex-column justify-content-end">
-        <%= turbo_stream_from @single_room %>
-        <div id="messages">
-          <%= render @messages %>
+<div id='chatroom_container' class="container-fluid h-100">
+  <div class="row justify-content-center h-100 pt-4">
+    <div class="col-md-4 col-xl-3 chat">
+      <div class="card  p-3 mb-sm-3 mb-md-0 contacts_card bg-light bg-gradient">
+        <h4> Hi <%= @current_user.email %> </h4>
+        <hr>
+        <h4> Users </h4>
+        <%= turbo_stream_from 'users' %>
+        <div id="users">
+          <%= render @users %>
         </div>
-        <%= render 'messages/new_message_form' %>
+        <hr>
+        <h4> Rooms </h4>
+        <%= render 'rooms/new_room_form' %>
+        <%= turbo_stream_from 'rooms' %>
+        <div id="rooms">
+          <%= render @rooms %>
+        </div>
       </div>
-    <% end  %>
-  </div>
+    </div>
 
+    <div class="col-md-8 col-xl-6 chat">
+      <div class="card justify-content-between bg-light bg-gradient">
+        <div class="card-header msg_head">
+          <div class="d-flex bd-highlight">
+            <%= @user&.email || @single_room.name %>
+          </div>
+        </div>
+        <% if @single_room %>
+          <div id="single_room" class="d-flex flex-column justify-content-end">
+            <%= turbo_stream_from @single_room %>
+            <div id="messages">
+              <%= render @messages %>
+            </div>
+            <div class="card-footer">
+              <div class="input-group">
+                <%= render 'messages/new_message_form' %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
