--- a/app/views/rooms/_new_room_form.html.erb
+++ b/app/views/rooms/_new_room_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: @room, remote: true, class: "d-flex mb-3" ) do |f| %>
+<%= form_with(model: @room, remote: true, class: "d-flex mb-3",
+              data: { controller: 'reset-form', action: 'turbo:submit-end->reset-form#reset' }) do |f| %>
   <%= f.text_field :name, class: "form-control me-2", autocomplete: 'off' %>
-  <%= f.submit data: { disable_with: false }, class: 'btn btn-warning'%>
+  <%= f.submit data: { disable_with: false }, class: 'btn btn-warning' %>
 <% end %>
