--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -28,7 +28,7 @@
         <% if @single_room %>
           <div id="single_room" class="d-flex flex-column justify-content-end">
             <%= turbo_stream_from @single_room %>
-            <div id="messages">
+            <div id="messages" data-controller="scroll" >
               <%= render @messages %>
             </div>
             <div class="card-footer">
