--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>RealChat</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to 'Sart Chatting', rooms_path %>
+<%= link_to 'Start Chatting', rooms_path %>
 <% if current_user %>
   <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
   <% else %>
