fix styles message

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -160,9 +160,7 @@ body,html{
 }
 .msg_container{
   min-width: 50%;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 10px;
+  margin: auto 10px;
   border-radius: 25px;
   background-color: #82ccdd;
   padding: 10px;
