--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= ".msg-#{current_user&.id}" %>
     {
       justify-content: end !important;
-      flex-direction: row-reverse !important;
+      flex-direction: row !important;
     }
   </style>
 </head>
