add lists style

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,1 +1,3 @@
-<div> <%= link_to room.name, room %> </div>
+<%= link_to room.name, room,
+            class: 'list-group-item rounded-3 py-1 my-1 list-group-item-action ripple link-secondary
+            text-decoration-none' %>
