--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,1 +1,3 @@
-<div> <%= link_to user.email, user %> </div>
+<%= link_to user.email, user,
+            class: 'list-group-item rounded-3 py-1 my-1 list-group-item-action ripple link-secondary
+            text-decoration-none' %>
