--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
 <%= link_to 'Start Chatting', rooms_path %>
 <% if current_user %>
   <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+  <%= link_to 'Edit Account', edit_user_registration_path, class: 'btn btn-primary'%>
   <% else %>
   <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
   <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary' %>
