--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </div>
     <div class="img_cont_msg">
-      <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img_msg">
+      <%= image_tag(message.user.chat_avatar, class: 'rounded-circle user_img_msg w-100 h-100') %>
     </div>
   </div>
 </div>
