--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,7 +7,7 @@
         %> </h4>
         <h4> Users </h4>
         <%= turbo_stream_from 'users' %>
-        <div id="users" class="list-group-small">
+        <div id="users" class="list-group-small list-group-light">
           <%= render @users %>
         </div>
         <hr>
