--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,7 +2,8 @@
   <div class="row justify-content-center h-100 pt-4">
     <div class="col-md-4 col-xl-3 chat">
       <div class="card shadow p-3 mb-sm-3 mb-md-0 contacts_card bg-light bg-gradient">
-        <h4 class="list-group-item px-3 border-0 rounded-3 list-group-item-success mb-5 shadow-lg text-gradient"> Hi <%=
+        <h4 class="list-group-item px-3 border-0 rounded-3 list-group-item-success mb-5 shadow-lg text-gradient
+        text-center text-secondary"> Hi <%=
           @current_user.email
         %> </h4>
         <h4> Users </h4>
