--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -124,12 +124,12 @@ body,html{
 }
 .online_icon{
   position: absolute;
-  height: 15px;
-  width:15px;
+  height: 10px;
+  width:10px;
   background-color: #4cd137;
   border-radius: 50%;
   bottom: 0.2em;
-  right: 0.4em;
+  left: 1.4em;
   border:1.5px solid white;
 }
 .offline{
