--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,10 +5,9 @@
   <div class="row justify-content-center h-100 pt-4">
     <div class="col-md-4 col-xl-3 chat">
       <div class="card shadow p-3 mb-sm-3 mb-md-0 contacts_card bg-light bg-gradient">
-        <h6 class="list-group-item px-3 border-0 rounded-3 list-group-item-success mb-5 shadow-lg text-gradient
-        text-center text-secondary">👋 <%=
-          @current_user.email
-        %> </h6>
+        <div id="users" class="list-group-small list-group-light personal_chat">
+        <%= render "users/user", user: current_user %>
+        </div>
         <h4> Users </h4>
         <%= turbo_stream_from 'users' %>
         <div id="users" class="list-group-small list-group-light">
