--- a/app/views/messages/_new_message_form.html.erb
+++ b/app/views/messages/_new_message_form.html.erb
@@ -1,7 +1,7 @@
 <div class="form-group msg-form w-100">
   <%= form_with(model: [@single_room, @message], remote: true, class: "d-flex",
                 data: { controller: 'reset-form', action: 'turbo:submit-end->reset-form#reset' }) do |f| %>
-    <%= f.text_area :body, id: 'chat-text', class: "form-control msg-content me-2",
+    <%= f.text_field :body, id: 'chat-text', class: "form-control msg-content me-2",
                     placeholder: 'Type your message...', autocomplete: 'off' %>
       <%= button_tag type: 'submit', data: { disable_with: false }, class: "btn btn-warning" do %>
         <%= bootstrap_icon "send", width: 25, height: 25 %>
