--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,8 @@
 
 <%= link_to 'Start Chatting', rooms_path %>
 <% if current_user %>
-  <%= image_tag(current_user.avatar_thumbnail) %>
+  <%#= image_tag(current_user.avatar_thumbnail) %>
+  <%= image_tag(current_user.avatar.thumb.url) if current_user.avatar? %>
 <% end %>
 <% if current_user %>
   <%= button_to 'Logout', destroy_user_session_path, method: :delete %>
