--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -26,7 +26,7 @@
       <div class="card shadow justify-content-between bg-light bg-gradient">
         <div class="card-header msg_head">
           <div class="d-flex bd-highlight">
-            <%= @user&.email || @single_room&.name %>
+            <%= @user&.username || @single_room&.name %>
           </div>
         </div>
         <% if @single_room %>
