--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -9,5 +9,5 @@
     <%= turbo_stream_from 'user_status' %>
     <%= render 'users/status', user: user %>
   </div>
-  <%= link_to user.email, user, class: 'ripple link-secondary text-decoration-none w-100 ms-2' %>
+  <%= link_to user.username, user, class: 'ripple link-secondary text-decoration-none w-100 ms-2' %>
 </div>
