--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </style>
 </head>
 
-<body class="bg-light bg-gradient">
+<body class="">
 <%= render 'layouts/navbar' %>
 <main class="container">
   <%= yield %>
